--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8">
         <meta-name="viewport" content="width=devices-width, initial-scale=1.0">
-        <title>Balatro</title>
+        <title>Joker Poker</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
        
