--- a/index.html
+++ b/index.html
@@ -128,21 +128,13 @@
   </div>
   <!--FAQ section-->
   <div id="faq" class="tab-content">
-    <p class="quest">1. What does item rarity mean in this game?</p>
-    <p class="ans">Item rarity simply refers to the minimum rarity an item can hold. For exmaple, a fireball is an uncommon item (hence fireball II), but it can go all the way to fireball IV.</p>
-    <p class="quest">2. Does this rando have potato-unlocked weapons?</p>
-    <p class="ans">Yes, if you do not own one simply reroll. For those unaware, some weapons are locked behind winning a run with a character, E.G. the Chopper from winning a run with multitasker.</p>
+   
   </div>
 
   <!-- About tab content -->
-  <div id="about" class="tab-content">
-    <p>v1.3: Added a multiple weapon rando and an FAQ section for info. 4/12/24</p>
-    <p>v1.2: 5 update weapons were added to the general list: Icicle, Sharp Tooth, Fireball, Particle Accelerator and the DEX-troyer. 3/12/24</p>
-    <p>v1.1: all 4 update characters are here, and all DLC characters & weapons available in filters. 16/11/24</p>
-    <p>v1.0: release, non-dlc and update features all avilable. 14/11/24</p><br>
+  <div id="about" class="tab-content left-padding">
+    <p> <span class="gr">Version 1.0 (Jan 30 2026):</span> Initial build released. Contains 6 purchaseable jokers, clickable card, cash, upgrades, joker selling, score and suits. Future updates will improve balance, add jokers, add upgrades, potentially add boss blinds, and add deck variety.</p>
     <p>Check out my github repo: <a class="blue" href="https://github.com/Ambush-4567">Here</a></p>
-      <p>Credits to Fyrope for the framework: <a class="blue" href="https://github.com/fyrope">here</a></p>
-    <p>My Email: <a class="blue" href=mailto:“brooksjohnsonjamez@gmail.com”>Here</a></p>
   </div>
             </div>
           </div>
